--- a/template/kpics/end_index.html
+++ b/template/kpics/end_index.html
@@ -70,14 +70,14 @@
             // console.log(kimg.height);
             // kimg.src = photos[photo].href;
             // if (1 == 2) {
-                this.style.setProperty('z-index', 1);
+                // this.style.setProperty('z-index', 1);
                 // this.getElementsByTagName('img').src = this.href;
 
                 modal.style.display = "block";
                 modalImg.src = this.href;
                 modalImg.classList.add('change');
                 modalImg.classList.remove('changed')
-                modal.style.height = Math.round(window.innerHeight - (window.innerHeight * 0.1));
+                modal.style.height = Math.round(window.innerHeight * 0.9);
                 document.cookie = 'photo_id=' + photo;
                 modalImg.classList.add('changed');
                 modalImg.classList.remove('change')
